Add more information to Example class.

--- a/apigen/deprecated.html
+++ b/apigen/deprecated.html
@@ -7,7 +7,7 @@
 	<title>Deprecated | apigenerator/example-source</title>
 
 	<script type="text/javascript" src="resources/combined.js?1742309502"></script>
-	<script type="text/javascript" src="elementlist.js?1556023514"></script>
+	<script type="text/javascript" src="elementlist.js?3589641074"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="resources/style.css?3505392360" />
 
 </head>
@@ -21,11 +21,8 @@
 		<div id="groups">
 			<h3>Packages</h3>
 			<ul>
-				<li><a href="package-apigenerator.html">apigenerator<span></span></a>
-						<ul>
-				<li><a href="package-apigenerator.org.html">org</a>
+				<li><a href="package-apigenerator.html">apigenerator</a>
 						</li>
-							</ul></li>
 			</ul>
 		</div>
 
@@ -89,6 +86,15 @@
 
 
 
+	<table class="summary" id="methods">
+	<caption>Methods summary</caption>
+	<tr>
+		<td class="name"><a href="class-Example.html">Example</a></td>
+		<td class="name"><code><a href="class-Example.html#_deprecated">deprecated()</a></code></td>
+		<td>
+		</td>
+	</tr>
+	</table>
 
 
 
