--- a/apigen/index.html
+++ b/apigen/index.html
@@ -20,11 +20,8 @@
 		<div id="groups">
 			<h3>Packages</h3>
 			<ul>
-				<li><a href="package-apigenerator.html">apigenerator<span></span></a>
-						<ul>
-				<li><a href="package-apigenerator.org.html">org</a>
+				<li><a href="package-apigenerator.html">apigenerator</a>
 						</li>
-							</ul></li>
 			</ul>
 		</div>
 
@@ -89,9 +86,6 @@
 	<caption>Packages summary</caption>
 	<tr>
 		<td class="name"><a href="package-apigenerator.html">apigenerator</a></td>
-	</tr>
-	<tr>
-		<td class="name"><a href="package-apigenerator.org.html">apigenerator\org</a></td>
 	</tr>
 	</table>
 
