--- a/apigen/404.html
+++ b/apigen/404.html
@@ -8,7 +8,7 @@
 	<title>Page not found | apigenerator/example-source</title>
 
 	<script type="text/javascript" src="resources/combined.js?1742309502"></script>
-	<script type="text/javascript" src="elementlist.js?1556023514"></script>
+	<script type="text/javascript" src="elementlist.js?3589641074"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="resources/style.css?3505392360" />
 
 </head>
@@ -22,11 +22,8 @@
 		<div id="groups">
 			<h3>Packages</h3>
 			<ul>
-				<li><a href="package-apigenerator.html">apigenerator<span></span></a>
-						<ul>
-				<li><a href="package-apigenerator.org.html">org</a>
+				<li><a href="package-apigenerator.html">apigenerator</a>
 						</li>
-							</ul></li>
 			</ul>
 		</div>
 
