--- a/apigen/class-Example.html
+++ b/apigen/class-Example.html
@@ -7,7 +7,7 @@
 	<title>Class Example | apigenerator/example-source</title>
 
 	<script type="text/javascript" src="resources/combined.js?1742309502"></script>
-	<script type="text/javascript" src="elementlist.js?1556023514"></script>
+	<script type="text/javascript" src="elementlist.js?3589641074"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="resources/style.css?3505392360" />
 
 </head>
@@ -21,11 +21,8 @@
 		<div id="groups">
 			<h3>Packages</h3>
 			<ul>
-				<li class="active"><a href="package-apigenerator.html">apigenerator<span></span></a>
-						<ul>
-				<li class="active"><a href="package-apigenerator.org.html">org</a>
+				<li class="active"><a href="package-apigenerator.html">apigenerator</a>
 						</li>
-							</ul></li>
 			</ul>
 		</div>
 
@@ -63,7 +60,7 @@
 				<a href="index.html" title="Overview"><span>Overview</span></a>
 			</li>
 			<li>
-				<a href="package-apigenerator.org.html" title="Summary of apigenerator\org"><span>Package</span></a>
+				<a href="package-apigenerator.html" title="Summary of apigenerator"><span>Package</span></a>
 			</li>
 			<li class="active">
 <span>Class</span>			</li>
@@ -105,7 +102,7 @@
 		
 		
 		
-		<b>Package:</b> <a href="package-apigenerator.html">apigenerator</a>\<a href="package-apigenerator.org.html">org</a><br />
+		<b>Package:</b> <a href="package-apigenerator.html">apigenerator</a><br />
 
 				<b>Copyright:</b>
 				bit3 UG 2013<br />
@@ -114,7 +111,7 @@
 				<b>Author:</b>
 				Tristan Lins &lt;<a
 href="mailto:tristan.lins&#64;bit3.de">tristan.lins&#64;<!-- -->bit3.de</a>&gt;<br />
-		<b>Located at</b> <a href="source-class-Example.html#16-32" title="Go to source code">src/Example.php</a><br />
+		<b>Located at</b> <a href="source-class-Example.html#16-82" title="Go to source code">src/Example.php</a><br />
 	</div>
 
 
@@ -158,6 +155,189 @@ href="mailto:tristan.lins&#64;bit3.de">tristan.lins&#64;<!-- -->bit3.de</a>&gt;<
 				</div>
 
 
+
+
+		</div>
+		</div></td>
+	</tr>
+	<tr data-order="bar" id="_bar">
+
+		<td class="attributes"><code>
+			 protected 
+			string
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_bar">#</a>
+		<code><a href="source-class-Example.html#33-41" title="Go to source code">bar</a>( )</code>
+
+		<div class="description short">
+			
+<p>Return the opposite of bar.</p>
+
+		</div>
+
+		<div class="description detailed hidden">
+			
+<p>Return the opposite of bar.</p>
+
+
+
+
+				<h4>Returns</h4>
+				<div class="list">
+					<code>string</code><br />
+				</div>
+
+
+
+
+		</div>
+		</div></td>
+	</tr>
+	<tr data-order="zap" id="_zap">
+
+		<td class="attributes"><code>
+			 protected 
+			
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_zap">#</a>
+		<code><a href="source-class-Example.html#43-51" title="Go to source code">zap</a>( <span>string <var>&amp; $return</var></span> )</code>
+
+		<div class="description short">
+			
+<p>Give you a "Hello world!".</p>
+
+		</div>
+
+		<div class="description detailed hidden">
+			
+<p>Give you a "Hello world!".</p>
+
+
+
+				<h4>Parameters</h4>
+				<div class="list"><dl>
+					<dt><var>$return</var></dt>
+					<dd><code>string</code><br>$return</dd>
+				</dl></div>
+
+
+
+
+
+		</div>
+		</div></td>
+	</tr>
+	<tr data-order="internal" id="_internal">
+
+		<td class="attributes"><code>
+			 public 
+			
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_internal">#</a>
+		<code><a href="source-class-Example.html#53-61" title="Go to source code">internal</a>( )</code>
+
+		<div class="description short">
+			
+<p>This is an internal method!</p>
+
+		</div>
+
+		<div class="description detailed hidden">
+			
+<p>This is an internal method!</p>
+
+
+
+
+
+
+				<h4>Internal</h4>
+				<div class="list">
+				</div>
+
+
+		</div>
+		</div></td>
+	</tr>
+	<tr data-order="deprecated" id="_deprecated">
+
+		<td class="attributes"><code>
+			 public 
+			
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_deprecated">#</a>
+		<code><a href="source-class-Example.html#63-71" title="Go to source code">deprecated</a>( )</code>
+
+		<div class="description short">
+			
+<p>This is a deprecated method!</p>
+
+		</div>
+
+		<div class="description detailed hidden">
+			
+<p>This is a deprecated method!</p>
+
+
+				<h4>Deprecated</h4>
+				<div class="list">
+				</div>
+
+
+
+
+
+
+		</div>
+		</div></td>
+	</tr>
+	<tr data-order="incomplete" id="_incomplete">
+
+		<td class="attributes"><code>
+			 public 
+			
+			
+			</code>
+		</td>
+
+		<td class="name"><div>
+		<a class="anchor" href="#_incomplete">#</a>
+		<code><a href="source-class-Example.html#73-81" title="Go to source code">incomplete</a>( )</code>
+
+		<div class="description short">
+			
+<p>This is ai incomplete method!</p>
+
+		</div>
+
+		<div class="description detailed hidden">
+			
+<p>This is ai incomplete method!</p>
+
+
+
+
+
+
+				<h4>Incomplete</h4>
+				<div class="list">
+				</div>
 
 
 		</div>
