--- a/apigen/package-apigenerator.html
+++ b/apigen/package-apigenerator.html
@@ -7,7 +7,7 @@
 	<title>Package apigenerator | apigenerator/example-source</title>
 
 	<script type="text/javascript" src="resources/combined.js?1742309502"></script>
-	<script type="text/javascript" src="elementlist.js?1556023514"></script>
+	<script type="text/javascript" src="elementlist.js?3589641074"></script>
 	<link rel="stylesheet" type="text/css" media="all" href="resources/style.css?3505392360" />
 
 </head>
@@ -21,17 +21,19 @@
 		<div id="groups">
 			<h3>Packages</h3>
 			<ul>
-				<li class="active"><a href="package-apigenerator.html">apigenerator<span></span></a>
-						<ul>
-				<li><a href="package-apigenerator.org.html">org</a>
+				<li class="active"><a href="package-apigenerator.html">apigenerator</a>
 						</li>
-							</ul></li>
 			</ul>
 		</div>
 
+		<hr />
 
 
 		<div id="elements">
+			<h3>Classes</h3>
+			<ul>
+				<li><a href="class-Example.html">Example</a></li>
+			</ul>
 
 
 
@@ -80,14 +82,16 @@
 <div id="content" class="package">
 	<h1>Package apigenerator</h1>
 
-	<table class="summary" id="packages">
-	<caption>Packages summary</caption>
-	<tr>
-		<td class="name"><a href="package-apigenerator.org.html">apigenerator\org</a></td>
-	</tr>
-	</table>
 
 
+<table class="summary" id="classes">
+<caption>Classes summary</caption>
+<tr>
+	<td class="name"><a href="class-Example.html">Example</a></td>
+	<td>This is an example class.
+<!-- by Texy2! --></td>
+</tr>
+</table>
 
 
 
