--- a/phpdoc/packages/apigenerator.html
+++ b/phpdoc/packages/apigenerator.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
 <meta charset="utf-8">
-<title>apigenerator/example-source » global</title>
+<title>apigenerator/example-source » apigenerator</title>
 <meta name="author" content="Mike van Riel">
 <meta name="description" content="">
 <link href="../css/template.css" rel="stylesheet" media="all">
@@ -51,16 +51,31 @@
 </div>
 <ul class="side-nav nav nav-list">
 <li class="nav-header">
-<i class="icon-map-marker"></i> Namespaces</li>
+<i class="icon-map-marker"></i> Packages</li>
 <li>
-<span class="empty-namespace"><i class="icon-stop"></i>global</span><ul class="nav nav-list nav-namespaces"></ul>
+<a href="../packages/apigenerator.html" title="apigenerator"><i class="icon-folder-open"></i>apigenerator</a><ul class="nav nav-list nav-packages"></ul>
 </li>
 <li class="nav-header">
 <i class="icon-custom icon-class"></i> Classes</li>
 <li><a href="#Example" title="This is an example class.">Example</a></li>
 </ul>
 </div>
-<div class="span8 namespace-contents"></div>
+<div class="span8 package-contents">
+<ul class="breadcrumb"><li>
+<a href="../index.html"><i class="icon-folder-open"></i></a><span class="divider">\</span><li class="active"><a href="../packages/apigenerator.html">apigenerator</a></li>
+</li></ul>
+<div class="package-indent">
+<h3>
+<i class="icon-custom icon-class"></i> Classes and interfaces</h3>
+<div id="Example" class="element ajax clickable class">
+<h1>Example<a href="../classes/Example.html">¶</a>
+</h1>
+<p class="short_description">This is an example class.</p>
+<div class="details collapse"></div>
+<a href="../classes/Example.html" class="more">« More »</a>
+</div>
+</div>
+</div>
 </div>
 <div class="row"><footer class="span12">
             Template is built using <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap 2</a> and icons provided by <a href="http://glyphicons.com/">Glyphicons</a>.<br>
