Fix spelling issue.

--- a/apigen/class-Example.html
+++ b/apigen/class-Example.html
@@ -322,13 +322,13 @@ href="mailto:tristan.lins&#64;bit3.de">tristan.lins&#64;<!-- -->bit3.de</a>&gt;<
 
 		<div class="description short">
 			
-<p>This is ai incomplete method!</p>
+<p>This is a incomplete method!</p>
 
 		</div>
 
 		<div class="description detailed hidden">
 			
-<p>This is ai incomplete method!</p>
+<p>This is a incomplete method!</p>
 
 
 
