--- a/apigen/source-class-Example.html
+++ b/apigen/source-class-Example.html
@@ -155,7 +155,7 @@
 </span><span id="71" class="l"><a class="l" href="#71">71: </a>    }
 </span><span id="72" class="l"><a class="l" href="#72">72: </a>    
 </span><span id="73" class="l"><a class="l" href="#73">73: </a>    <span class="php-comment">/**
-</span></span><span id="74" class="l"><a class="l" href="#74">74: </a><span class="php-comment">     * This is ai incomplete method!
+</span></span><span id="74" class="l"><a class="l" href="#74">74: </a><span class="php-comment">     * This is a incomplete method!
 </span></span><span id="75" class="l"><a class="l" href="#75">75: </a><span class="php-comment">     *
 </span></span><span id="76" class="l"><a class="l" href="#76">76: </a><span class="php-comment">     * @incomplete
 </span></span><span id="77" class="l"><a class="l" href="#77">77: </a><span class="php-comment">     */</span>
