Add an @todo to Example::incomplete().

--- a/apigen/class-Example.html
+++ b/apigen/class-Example.html
@@ -111,7 +111,7 @@
 				<b>Author:</b>
 				Tristan Lins &lt;<a
 href="mailto:tristan.lins&#64;bit3.de">tristan.lins&#64;<!-- -->bit3.de</a>&gt;<br />
-		<b>Located at</b> <a href="source-class-Example.html#16-82" title="Go to source code">src/Example.php</a><br />
+		<b>Located at</b> <a href="source-class-Example.html#16-83" title="Go to source code">src/Example.php</a><br />
 	</div>
 
 
@@ -200,7 +200,7 @@ href="mailto:tristan.lins&#64;bit3.de">tristan.lins&#64;<!-- -->bit3.de</a>&gt;<
 	<tr data-order="zap" id="_zap">
 
 		<td class="attributes"><code>
-			 protected 
+			 private 
 			
 			
 			</code>
@@ -318,7 +318,7 @@ href="mailto:tristan.lins&#64;bit3.de">tristan.lins&#64;<!-- -->bit3.de</a>&gt;<
 
 		<td class="name"><div>
 		<a class="anchor" href="#_incomplete">#</a>
-		<code><a href="source-class-Example.html#73-81" title="Go to source code">incomplete</a>( )</code>
+		<code><a href="source-class-Example.html#73-82" title="Go to source code">incomplete</a>( )</code>
 
 		<div class="description short">
 			
@@ -335,6 +335,10 @@ href="mailto:tristan.lins&#64;bit3.de">tristan.lins&#64;<!-- -->bit3.de</a>&gt;<
 
 
 
+				<h4>Todo</h4>
+				<div class="list">
+						I'm incomplete<br />
+				</div>
 				<h4>Incomplete</h4>
 				<div class="list">
 				</div>
