--- a/apigen/package-apigenerator.html
+++ b/apigen/package-apigenerator.html
@@ -88,8 +88,7 @@
 <caption>Classes summary</caption>
 <tr>
 	<td class="name"><a href="class-Example.html">Example</a></td>
-	<td>This is an example class.
-<!-- by Texy2! --></td>
+	<td>This is an example class.</td>
 </tr>
 </table>
 
