--- a/apigen/todo.html
+++ b/apigen/todo.html
@@ -86,6 +86,15 @@
 
 
 
+	<table class="summary" id="methods">
+	<caption>Methods summary</caption>
+	<tr>
+		<td class="name" rowspan="1"><a href="class-Example.html">Example</a></td>
+		<td class="name" rowspan="1"><code><a href="class-Example.html#_incomplete">incomplete()</a></code></td>
+		<td>I'm incomplete
+<!-- by Texy2! --></td>
+	</tr>
+	</table>
 
 
 
